Finished robot class and tidied up some files.

--- a/oopified/CMakeLists.txt
+++ b/oopified/CMakeLists.txt
@@ -5,15 +5,17 @@ project(RobotControl)
 
 # Add project executable
 add_executable(${PROJECT_NAME}
-	main.cpp
-	Robot.h
-	Robot.cpp
-	transform.h
-	transform.cpp
-	gmm.h
-	gmm.cpp
-	MP.h
-	MP.cpp
+  main.cpp
+  Robot.h
+  Robot.cpp
+  transform.h
+  transform.cpp
+  BasisFunction.h
+  gaussian.h
+  gmm.h
+  gmm.cpp
+  MP.h
+  MP.cpp
 )
 
 # Link shared libraries
@@ -21,12 +23,12 @@ link_directories(/usr/local/lib)
 
 # Include dynamixel stuff
 include_directories(
-	/usr/local/include/dynamixel_sdk
-	/usr/local/include/DynamixelHelper
+  /usr/local/include/dynamixel_sdk
+  /usr/local/include/DynamixelHelper
 )
 
 # Link libraries to project
 target_link_libraries(${PROJECT_NAME}
-	DynamixelHelper
-	dxl_x64_cpp # DynamixelSDK
-)
+  DynamixelHelper
+  dxl_x64_cpp # DynamixelSDK
+  )
