--- a/libraries/DynamixelHelper/CMakeLists.txt
+++ b/libraries/DynamixelHelper/CMakeLists.txt
@@ -18,5 +18,5 @@ target_link_libraries(DynamixelHelper
 install(
     TARGETS DynamixelHelper
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/DynamixelHelper
+    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
 )
