--- a/simple_tasks/blink/CMakeLists.txt
+++ b/simple_tasks/blink/CMakeLists.txt
@@ -1,28 +1,16 @@
 cmake_minimum_required(VERSION 3.18)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-# Copy compile commands for vim
-add_custom_target(
-    copy-compile-commands ALL
-    ${CMAKE_COMMAND} -E copy_if_different
-        ${CMAKE_BINARY_DIR}/compile_commands.json
-        ${CMAKE_CURRENT_LIST_DIR}
-    )
-
 # Set project name
 project(blink)
 
 # Add project executable
 add_executable(${PROJECT_NAME} ${PROJECT_NAME}.cpp)
 
-# Link shared libraries
+# Link shared libraries and include headers
+# Dynamixel sdk and helper installed here
 link_directories(/usr/local/lib)
-
-# Include dynamixel stuff
-include_directories(
-    /usr/local/include/dynamixel_sdk
-    /usr/local/include/DynamixelHelper
-)
+include_directories(/usr/local/include)
 
 # Link libraries to project
 target_link_libraries(${PROJECT_NAME}
