--- a/simple_tasks/read_motor/CMakeLists.txt
+++ b/simple_tasks/read_motor/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 3.18)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 # Set project name
 project(read_motor)
@@ -6,14 +7,10 @@ project(read_motor)
 # Add project executable
 add_executable(${PROJECT_NAME} ${PROJECT_NAME}.cpp)
 
-# Link shared libraries
+# Link shared libraries and include headers
+# Dynamixel sdk and helper installed here
 link_directories(/usr/local/lib)
-
-# Include dynamixel stuff
-include_directories(
-    /usr/local/include/dynamixel_sdk
-    /usr/local/include/DynamixelHelper
-)
+include_directories(/usr/local/include)
 
 # Link libraries to project
 target_link_libraries(${PROJECT_NAME}
