--- a/ros/Dockerfile
+++ b/ros/Dockerfile
@@ -13,6 +13,7 @@ RUN make CMAKE_BUILD_TYPE=RelWithDebInfo
 RUN make install
 
 # Install my neovim configs
+RUN apt install -y nodejs npm python3.10-venv curl wget
 RUN git clone https://github.com/devon-g/neovim /root/.config/nvim/ -b experimental
 
 # Source ros setup
