--- a/ros/ros2_ws/src/cpp_srvcli/package.xml
+++ b/ros/ros2_ws/src/cpp_srvcli/package.xml
@@ -3,9 +3,9 @@
 <package format="3">
   <name>cpp_srvcli</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="root@todo.todo">root</maintainer>
-  <license>TODO: License declaration</license>
+  <description>C++ client server tutorial</description>
+  <maintainer email="dgardner365@gmail.com">root</maintainer>
+  <license>Apache License 2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
