ignoring non-source folders

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
-build/
-.cache/
-compile_commands.json
-
-complex_tasks/inverse_kinematics/__pycache__
-complex_tasks/inverse_kinematics/ik_env
-complex_tasks/inverse_kinematics/__pycache__
+**build/
+**devel/
+**log/
+**.cache/
+**compile_commands.json
+**__pycache__
