--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-**build/
-**devel/
-**log/
-**.cache/
-**compile_commands.json
-**__pycache__
+build/
+.cache/
+compile_commands.json
+
+complex_tasks/inverse_kinematics/__pycache__
+complex_tasks/inverse_kinematics/ik_env
+complex_tasks/inverse_kinematics/__pycache__
