ignore catkin build folders

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@ compile_commands.json
 complex_tasks/inverse_kinematics/__pycache__
 complex_tasks/inverse_kinematics/ik_env
 complex_tasks/inverse_kinematics/__pycache__
+
+# Ros things
+./ros/thesis_ros_ws/build/
+./ros/thesis_ros_ws/devel/
+./ros/thesis_ros_ws/log/
