--- a/ros/thesis_ros_ws/src/tf2_tutorial/CMakeLists.txt
+++ b/ros/thesis_ros_ws/src/tf2_tutorial/CMakeLists.txt
@@ -148,6 +148,8 @@ target_link_libraries(turtle_tf2_broadcaster ${catkin_LIBRARIES})
 add_executable(turtle_tf2_listener src/turtle_tf2_listener.cpp)
 target_link_libraries(turtle_tf2_listener ${catkin_LIBRARIES})
 
+add_executable(frame_tf2_broadcaster src/frame_tf2_broadcaster.cpp)
+target_link_libraries(frame_tf2_broadcaster ${catkin_LIBRARIES})
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
 ## target back to the shorter version for ease of user use
