--- a/ros2/src/wx200_control/package.xml
+++ b/ros2/src/wx200_control/package.xml
@@ -12,6 +12,7 @@
   <depend>rclcpp</depend>
   <depend>std_msgs</depend>
   <depend>dynamixel_sdk</depend>
+  <depend>wx200_control_interfaces</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
