created a launch file to launch rviz alongside my robot controller

--- a/ros2/src/wx200_control/CMakeLists.txt
+++ b/ros2/src/wx200_control/CMakeLists.txt
@@ -26,4 +26,7 @@ install(TARGETS
   multi_motor_writer
   DESTINATION lib/${PROJECT_NAME})
 
+install(DIRECTORY launch
+  DESTINATION share/${PROJECT_NAME})
+
 ament_package()
