--- a/ros2/src/wx200_control/package.xml
+++ b/ros2/src/wx200_control/package.xml
@@ -9,6 +9,8 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
+  <exec_depend>rso2launch</exec_depend>
+
   <depend>rclcpp</depend>
   <depend>std_msgs</depend>
   <depend>dynamixel_sdk</depend>
