--- a/ros2/src/wx200_control/CMakeLists.txt
+++ b/ros2/src/wx200_control/CMakeLists.txt
@@ -3,30 +3,43 @@ project(wx200_control)
 
 set(CMAKE_CXX_STANDARD 20)
 
-if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-  add_compile_options(-Wall -Wextra -Wpedantic)
-endif()
+if (CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+    add_compile_options(-Wall -Wextra -Wpedantic)
+endif ()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
+find_package(sensor_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
 find_package(dynamixel_sdk REQUIRED)
 find_package(wx200_control_interfaces REQUIRED)
 
 add_executable(multi_motor_writer src/motor_pub.cpp)
 ament_target_dependencies(multi_motor_writer
-  rclcpp
-  std_msgs
-  dynamixel_sdk
-  wx200_control_interfaces
-  )
+        rclcpp
+        std_msgs
+        dynamixel_sdk
+        wx200_control_interfaces)
+
+add_executable(state_publisher src/state_publisher.cpp)
+ament_target_dependencies(state_publisher
+        rclcpp
+        sensor_msgs
+        geometry_msgs
+        dynamixel_sdk
+        wx200_control_interfaces)
 
 install(TARGETS
-  multi_motor_writer
-  DESTINATION lib/${PROJECT_NAME})
+        multi_motor_writer
+        state_publisher
+        DESTINATION lib/${PROJECT_NAME})
 
-install(DIRECTORY launch
-  DESTINATION share/${PROJECT_NAME})
+install(DIRECTORY
+        launch
+        urdf
+        rviz
+        DESTINATION share/${PROJECT_NAME})
 
 ament_package()
