--- a/ros2/src/wx200_control/package.xml
+++ b/ros2/src/wx200_control/package.xml
@@ -13,6 +13,8 @@
 
   <depend>rclcpp</depend>
   <depend>std_msgs</depend>
+  <depend>sensor_msgs</depend>
+  <depend>geometry_msgs</depend>
   <depend>dynamixel_sdk</depend>
   <depend>wx200_control_interfaces</depend>
 
