--- a/learn_dynamixel/complex_tasks/motion_primitives/CMakeLists.txt
+++ b/learn_dynamixel/complex_tasks/motion_primitives/CMakeLists.txt
@@ -1,23 +1,5 @@
-# Set project name
-cmake_minimum_required(VERSION 3.18)
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-
-# Set project name
-project(playback_motion_primitives)
-
-# Add project executable
-add_executable(${PROJECT_NAME}
-    ${PROJECT_NAME}.cpp
-    motion_primitives.cpp
-    motion_primitives.h)
-
-# Link shared libraries and include headers
-# Dynamixel sdk and helper installed here
-link_directories(/usr/local/lib)
-include_directories(/usr/local/include)
-
-# Link libraries to project
-target_link_libraries(${PROJECT_NAME}
-    DynamixelHelper
-    dxl_x64_cpp # DynamixelSDK
-)
+add_executable(playback_motion_primitives
+    ./src/playback_motion_primitives.cpp
+    ./src/motion_primitives.cpp)
+target_include_directories(playback_motion_primitives
+    PUBLIC ./include/)
