--- a/learn_dynamixel/complex_tasks/inverse_kinematics/CMakeLists.txt
+++ b/learn_dynamixel/complex_tasks/inverse_kinematics/CMakeLists.txt
@@ -1,9 +1,13 @@
+cmake_minimum_required(VERSION 3.18)
+project(forward_kinematics)
+
+find_package(Eigen3 REQUIRED NO_MODULE)
+
 add_executable(inverse_kinematics
     ./src/main.cpp
     ./src/ik.cpp
     ./src/fk.cpp)
-target_include_directories(inverse_kinematics
-    PUBLIC ./include/)
-find_package(Eigen3 REQUIRED NO_MODULE)
 target_link_libraries(inverse_kinematics
+    dynamixel_helper
+    dxl_x64_cpp
     Eigen3::Eigen)
