--- a/learn_dynamixel/complex_tasks/motion_primitives/CMakeLists.txt
+++ b/learn_dynamixel/complex_tasks/motion_primitives/CMakeLists.txt
@@ -1,5 +1,9 @@
+cmake_minimum_required(VERSION 3.18)
+project(playback_motion_primitives)
+
 add_executable(playback_motion_primitives
-    ./src/playback_motion_primitives.cpp
+    ./src/main.cpp
     ./src/motion_primitives.cpp)
-target_include_directories(playback_motion_primitives
-    PUBLIC ./include/)
+target_link_libraries(playback_motion_primitives
+    dynamixel_helper
+    dxl_x64_cpp)
