--- a/ros2/src/wx200_control/package.xml
+++ b/ros2/src/wx200_control/package.xml
@@ -9,13 +9,10 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <exec_depend>ros2launch</exec_depend>
-
   <depend>rclcpp</depend>
-  <depend>std_msgs</depend>
   <depend>sensor_msgs</depend>
-  <depend>geometry_msgs</depend>
   <depend>dynamixel_sdk</depend>
+  <depend>dynamixel_helper</depend>
   <depend>robot_state_publisher</depend>
   <depend>wx200_control_interfaces</depend>
 
