--- a/dynamixel_helper/CMakeLists.txt
+++ b/dynamixel_helper/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.18)
 project(dynamixel_helper)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+set(CMAKE_CXX_STANDARD 20)
 
 add_library(dynamixel_helper SHARED ./src/dynamixel_helper.cpp)
 
