--- a/ros2_ws/src/wx200_control_interfaces/CMakeLists.txt
+++ b/ros2_ws/src/wx200_control_interfaces/CMakeLists.txt
@@ -1,22 +1,17 @@
 cmake_minimum_required(VERSION 3.8)
 project(wx200_control_interfaces)
 
-set(CMAKE_CXX_STANDARD 20)
-
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-find_package(builtin_interfaces REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
-
-set(msg_files "msg/JointGoal.msg")
+find_package(geometry_msgs REQUIRED)
 
 rosidl_generate_interfaces(${PROJECT_NAME}
-  ${msg_files}
-  DEPENDENCIES builtin_interfaces)
+    srv/IKGoal.srv
+    DEPENDENCIES geometry_msgs)
 
-ament_export_dependencies(rosidl_default_runtime)
 ament_package()
