--- a/ros2_ws/src/wx200_control_interfaces/package.xml
+++ b/ros2_ws/src/wx200_control_interfaces/package.xml
@@ -4,18 +4,16 @@
   <name>wx200_control_interfaces</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="dgardner365@gmail.com">devon</maintainer>
+  <maintainer email="dgardner365@gmail.com">goose</maintainer>
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
-  <buildtool_depend>rosidl_default_generators</buildtool_depend>
-  <buildtool_depend>builtin_interfaces</buildtool_depend>
-  <build_depend>builtin_interfaces</build_depend>
-  <exec_depend>builtin_interfaces</exec_depend>
-  <exec_depend>rosidl_default_runtime</exec_depend>
 
+  <depend>geometry_msgs</depend>
+  <buildtool_depend>rosidl_default_generators</buildtool_depend>
+  <exec_depend>rosidl_default_runtime</exec_depend>
   <member_of_group>rosidl_interface_packages</member_of_group>
-  
+
   <export>
     <build_type>ament_cmake</build_type>
   </export>
